--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 		<h1 class="eslogan">Datos curiosos,<br><span class="fuerza">cada día</span> en tu navegador<span class="punto">.</span></h1>
 
-		<a href="https://www.facebook.com/curiososclub"><h2 class="invitacion">Únete al club &#10095;</h2></a>
+		<h2 class="invitacion"><a href="https://www.facebook.com/curiososclub">Únete al club <span class="flecha">&#10095;</span></a></h2>
 	</body>
 </html>
