enlazar a Instagram, en lugar de Facebook.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 
 		<h1 class="eslogan">Datos curiosos,<br><span class="fuerza">cada día</span> en tu navegador<span class="punto">.</span></h1>
 
-		<h2 class="invitacion"><a href="https://www.facebook.com/curiososclub">Únete al club <span class="flecha">&#10095;</span></a></h2>
+		<h2 class="invitacion"><a href="https://www.instagram.com/curiososclub">Únete al club <span class="flecha">&#10095;</span></a></h2>
 	</body>
 </html>
