usar favicon svg.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<title>Datos curiosos, cada día en tu navegador &#8226; Curiosos</title>
 
-		<link rel="icon" type="image/png" href="favicon.png">
+		<link rel="icon" href="favicon.svg">
 		<link rel="stylesheet" href="https://unpkg.com/modern-normalize">
 		<link rel="stylesheet" href="main.css">
 	</head>
