añadir formulario inicial gosquared.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>Datos curiosos, cada día en tu navegador &#8226; Curiosos</title>
 
 		<link rel="icon" href="favicon.svg">
+		<link rel="stylesheet" href="https://forms.gosquared.com/forms.css" />
 		<link rel="stylesheet" href="https://unpkg.com/modern-normalize">
 		<link rel="stylesheet" href="main.css">
 	</head>
@@ -17,5 +18,15 @@
 		<h1 class="eslogan">Datos curiosos,<br><span class="fuerza">cada día</span> en tu navegador<span class="punto">.</span></h1>
 
 		<h2 class="invitacion"><a href="https://www.instagram.com/curiososclub">Únete al club <span class="flecha">&#10095;</span></a></h2>
+		
+		<form id="gosquared_form" action="https://forms.gosquared.com/post/GSN-244058-E/c224e555-993b-4a74-8ed2-c1e7ff2f249d" method="POST" target="_blank">
+		  
+			<p>Capture GoSquared Leads from your own forms on sites like Webflow, Bubble and Wordpress</p>
+			<p>Look for the HTML Action option in the installation instructions</p>
+		  
+		  <input style="position:absolute; left:-9999px" aria-hidden="true" name="gs_c224e555-993b-4a74-8ed2-c1e7ff2f249d" tabindex="-1" value="" />
+		  <a href="https://forms.gosquared.com/r/GSN-244058-E" class="poweredby">Powered by <strong>GoSquared</strong></a>
+		</form>
+		<script src="https://forms.gosquared.com/forms.js" async></script>
 	</body>
 </html>
