actualizar formulario gosquared.

--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
 		
 		<form id="gosquared_form" action="https://forms.gosquared.com/post/GSN-244058-E/c224e555-993b-4a74-8ed2-c1e7ff2f249d" method="POST" target="_blank">
 		  
-			<p>Capture GoSquared Leads from your own forms on sites like Webflow, Bubble and Wordpress</p>
-			<p>Look for the HTML Action option in the installation instructions</p>
+			<label>
+			  <p>Email:</p>
+			  <input type="email" placeholder="someone@example.com" name="email" required />
+			</label>
+			<div>
+			  <input type="submit" value="Submit" name="submit" />
+			</div>
 		  
-		  <input style="position:absolute; left:-9999px" aria-hidden="true" name="gs_c224e555-993b-4a74-8ed2-c1e7ff2f249d" tabindex="-1" value="" />
+		  <input style="position:absolute;left:-9999px" aria-hidden="true" name="gs_c224e555-993b-4a74-8ed2-c1e7ff2f249d" tabindex="-1" value="" />
 		  <a href="https://forms.gosquared.com/r/GSN-244058-E" class="poweredby">Powered by <strong>GoSquared</strong></a>
 		</form>
 		<script src="https://forms.gosquared.com/forms.js" async></script>
