--- a/site/index.html
+++ b/site/index.html
@@ -18,9 +18,7 @@
 		<a class="curiosos-cta" href="https://www.instagram.com/curiososclub" target="_blank">
 			Únete al club
 			<span class="curiosos-cta-icon">
-				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-					<path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6">
-				</svg>
+				<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M13 7l5 5m0 0l-5 5m5-5H6"/></svg>
 			</span>
 		</a>
 	</body>
